--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,10 @@ body {
   background-color: #a0081e;
 }
 
+.dropdown-item:hover {
+  background-color: transparent;
+}
+
 .fake-link {
   cursor: pointer;
 }
