--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,28 @@ body {
   cursor: pointer;
 }
 
+.FloatingChowt {
+  bottom: 2%;
+  height: 50px;
+  position: fixed;
+  right: 2%;
+  width: 50px;
+  z-index: 1049;
+}
+
+.FloatingChowt .btn {
+  border-radius: 100%;
+  font-size: 16px;
+  height: 50px;
+  line-height: 28px;
+  text-align: center;
+  width: 50px;
+}
+
+.FloatingChowt .btn:focus {
+  outline: none;
+}
+
 .mt-app {
   margin-top: 5rem !important;
 }
