REFACTOR/ Changed rating stars color to gold

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,3 +49,7 @@ body {
 .mt-app {
   margin-top: 5rem !important;
 }
+
+.react-rater-star.is-active, .react-rater-star.is-active-half:before, .react-rater-star.will-be-active {
+  color: gold !important;
+}
