--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Bungee|Itim');
+@import url('https://fonts.googleapis.com/css?family=Bungee|Itim|Ubuntu');
 .App {
   text-align: center;
 }
@@ -37,8 +37,9 @@ body {
   outline: none;
 }
 
-.home-heading {
+.chowster-font {
   font-family: 'Bungee', cursive;
+  color: black;
   text-shadow: rgb(255, 255, 255) 3px 0px 0px,
     rgb(255, 255, 255) 2.83487px 0.981584px 0px,
     rgb(255, 255, 255) 2.35766px 1.85511px 0px,
@@ -72,4 +73,46 @@ body {
 .react-rater-star.is-active-half:before,
 .react-rater-star.will-be-active {
   color: gold !important;
+}
+
+.landing-page {
+  font-size: 1rem;
+}
+
+#welcome {
+  margin-top: 25vh;
+  margin-bottom: 15px;
+}
+
+.ubuntu {
+  font-family: 'Ubuntu', sans-serif;
+}
+
+a {
+  color: #84919e;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #1f2020;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 544px) {
+  .landing-page {
+    font-size: 1.2rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .landing-page {
+    font-size: 1.4rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .landing-page {
+    font-size: 1.6rem;
+  }
 }
