switch a tag styles to only occur on landing page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -88,12 +88,12 @@ body {
   font-family: 'Ubuntu', sans-serif;
 }
 
-a {
+.landing-page a {
   color: #84919e;
   text-decoration: none;
 }
 
-a:hover {
+.landing-page a:hover {
   color: #1f2020;
   text-decoration: none;
   cursor: pointer;
