--- a/client/src/App.css
+++ b/client/src/App.css
@@ -99,6 +99,10 @@ body {
   cursor: pointer;
 }
 
+.Post img {
+  max-height: 5rem;
+}
+
 @media only screen and (max-width: 544px) {
   .landing-page {
     font-size: 1.2rem;
