--- a/client/src/components/follow-button/follow-button.styles.scss
+++ b/client/src/components/follow-button/follow-button.styles.scss
@@ -1,4 +1,25 @@
+@import '../../variables';
+
 .follow-button {
-  float: right;
-  margin-top: 10px;
+  font-weight: bold;
+  border-radius: 9999px;
+  border: 1.5px solid lightgrey;
+  color: lightgrey;
+  background: transparent;
+  padding: 0.5rem 0.75rem;
+
+  &:hover {
+    background-color: rgba(lightgrey, 0.3);
+  }
+
+  &.active {
+    background-color: black;
+    border: 1.5px solid black;
+    color: $chowster-red;
+
+    &:hover {
+      background-color: rgba(black, 0.3);
+      color: black;
+    }
+  }
 }
