--- a/client/src/pages/user-page/user-page.styles.scss
+++ b/client/src/pages/user-page/user-page.styles.scss
@@ -1,10 +1,12 @@
+@import '../../variables';
+
 #user-page {
   margin: auto;
   text-align: left;
   color: white;
 
   .card {
-    background-color: #a0081e;
+    background-color: $chowster-red;
     border-radius: unset;
     border-left: 1px solid lightgrey;
     border-right: 1px solid lightgrey;
