Enable scrolling for the component

--- a/client/src/pages/home-page/home-page.styles.scss
+++ b/client/src/pages/home-page/home-page.styles.scss
@@ -1,6 +1,9 @@
 @import '../../variables';
 
 #home-page {
+  overflow: auto;
+  max-height: 100vh;
+
   .card {
     background-color: $chowster-red;
     border: 1.5px solid white;
