--- a/client/src/pages/home-page/home-page.styles.scss
+++ b/client/src/pages/home-page/home-page.styles.scss
@@ -6,8 +6,9 @@
 
   .card {
     background-color: $chowster-red;
-    border: 1.5px solid white;
+    border: 1.5px solid grey;
     border-top: none;
+    border-right: none;
     border-radius: 0px;
     color: white;
 
@@ -16,8 +17,10 @@
     }
 
     .list-group-item {
+      border-right: none;
+      border-left: none;
       background-color: $chowster-red;
-      border-color: white;
+      border-color: grey;
     }
 
     .list-header {
