--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,10 +1,27 @@
 @import 'variables';
 @import url('https://fonts.googleapis.com/css?family=Bungee|Itim|Ubuntu');
 
+#root {
+  display: flex;
+
+  main {
+    flex: 3;
+    order: 2;
+    height: 100vh;
+    overflow-y: auto;
+  }
+
+  @media only screen and (max-width: 768px) {
+    main {
+      flex: 5;
+    }
+  }
+}
+
 .App {
   text-align: center;
   display: flex;
-  position: fixed;
+  overflow-y: hidden;
 }
 
 body {
