Updated flex-basis to fix responsive page styling

--- a/client/src/pages/user-page/user-page.styles.scss
+++ b/client/src/pages/user-page/user-page.styles.scss
@@ -3,8 +3,7 @@
 #user-page {
   text-align: left;
   color: white;
-  display: flex;
-  flex-wrap: wrap;
+  flex-basis: 100%;
 
   .profile-img {
     width: 33%;
