--- a/client/src/components/compose-chowt-link/compose-chowt-link.styles.scss
+++ b/client/src/components/compose-chowt-link/compose-chowt-link.styles.scss
@@ -4,8 +4,8 @@
   .btn {
     margin: 0 auto;
     background-color: $chowster-red;
-    border: 2px solid lightgrey;
-    color: lightgrey;
+    border: 2px solid grey;
+    color: grey;
     border-radius: 100%;
     font-size: 16px;
     height: 50px;
@@ -13,8 +13,8 @@
     padding: 0.75rem;
 
     &:hover {
-      background-color: lightgrey;
-      color: $chowster-red;
+      background-color: grey;
+      color: $chowster-red !important;
     }
 
     &:focus {
