Added screen breakpoints to variables

--- a/client/src/_variables.scss
+++ b/client/src/_variables.scss
@@ -1,3 +1,8 @@
+$breakpoint-sm: 576px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 992px;
+$breakpoint-xl: 1200px;
+
 $chowster-red: #7f0100;
 
 @mixin chowster-text-shadow($color: white) {
