--- a/client/src/components/chowt-form/chowt-form.styles.scss
+++ b/client/src/components/chowt-form/chowt-form.styles.scss
@@ -34,7 +34,7 @@
     }
   }
 
-  @media only screen and (max-width: 576px) {
+  @media only screen and (max-width: $breakpoint-sm) {
     width: 85%;
   }
 }
