Utilize breakpoints Added new classes to hide and display on different screen sizes

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -88,19 +88,29 @@ body {
   max-height: 5rem;
 }
 
-@media only screen and (max-width: 544px) {
+@media only screen and (max-width: $breakpoint-sm) {
   .landing-page {
     font-size: 1.2rem;
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: $breakpoint-md) {
   .landing-page {
     font-size: 1.4rem;
   }
+
+  .hide-on-md {
+    display: none;
+  }
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: $breakpoint-md) {
+  .hide-on-lg {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: $breakpoint-lg) {
   .landing-page {
     font-size: 1.6rem;
   }
