--- a/client/src/components/chowt-form/chowt-form.styles.scss
+++ b/client/src/components/chowt-form/chowt-form.styles.scss
@@ -1,8 +1,6 @@
 @import '../../variables';
 
 #chowt-form {
-  width: 65%;
-  margin: auto;
   color: white;
 
   #text {
@@ -22,19 +20,11 @@
     }
   }
 
-  & > .d-flex {
+  & > .flex {
     align-items: center;
 
     input[type='checkbox'] {
       margin-top: 0.5rem;
     }
-
-    .align-right {
-      margin-left: auto;
-    }
-  }
-
-  @media only screen and (max-width: $breakpoint-sm) {
-    width: 85%;
   }
 }
