Added hide-on-sm class

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -92,6 +92,10 @@ body {
   .landing-page {
     font-size: 1.2rem;
   }
+
+  .hide-on-sm {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: $breakpoint-md) {
