Updated styling for post location text

--- a/client/src/components/post/post.styles.scss
+++ b/client/src/components/post/post.styles.scss
@@ -1,6 +1,11 @@
 @import '../../variables';
 
 .post {
+  a.location {
+    color: white;
+    text-decoration: underline;
+  }
+
   .post-avatar {
     border-radius: 50%;
     border: 1.5px solid black;
