--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -19,7 +19,6 @@
 }
 
 .App {
-  text-align: center;
   display: flex;
   overflow-y: hidden;
 }
@@ -27,7 +26,6 @@
 body {
   background-color: $chowster-red;
 }
-
 .dropdown-item:hover {
   background-color: transparent;
 }
@@ -133,5 +131,37 @@ body {
 
   .right {
     margin-left: auto;
+  }
+}
+
+#primary-column {
+  order: 1;
+  flex: 3;
+}
+
+.list-item {
+  display: flex;
+  border: 1px solid lighten(#111, 10%);
+  border-left: none;
+  margin-top: -1px;
+  padding: 12px;
+
+  .img-container {
+    margin-right: 1rem;
+
+    img {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+
+      @media only screen and (max-width: $breakpoint-sm) {
+        width: 35px;
+        height: 35px;
+      }
+    }
+  }
+
+  .content-body {
+    flex: 4;
   }
 }
