Added button to follow users

--- a/client/src/components/who-to-follow/who-to-follow.styles.scss
+++ b/client/src/components/who-to-follow/who-to-follow.styles.scss
@@ -8,15 +8,26 @@ $card-color: lighten(#111, 5%);
 
   .card {
     background-color: inherit;
+
+    .content-body {
+      display: flex;
+
+      .follow-button {
+        margin-left: auto;
+        font-size: 0.8rem;
+        max-height: 40px;
+      }
+    }
   }
 
   .list-item {
     border-left: none;
     border-right: none;
 
-    a {
+    .username {
       color: inherit;
       font-weight: bolder;
+      max-width: 50%;
     }
 
     &:hover {
