Stopped import of unused font

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,5 +1,5 @@
 @import 'variables';
-@import url('https://fonts.googleapis.com/css?family=Bungee|Itim|Ubuntu');
+@import url('https://fonts.googleapis.com/css?family=Bungee|Ubuntu');
 
 #root {
   display: flex;
