Display follow button on each user if not current user

--- a/client/src/components/tab-content/tab-content.styles.scss
+++ b/client/src/components/tab-content/tab-content.styles.scss
@@ -10,5 +10,11 @@
       font-weight: bolder;
       color: white;
     }
+
+    .follow-button {
+      margin-left: auto;
+      font-size: 0.8rem;
+      padding: 0.1rem 0.25rem;
+    }
   }
 }
