Editted css so textarea is centered

--- a/client/src/components/chowt-form/chowt-form.styles.scss
+++ b/client/src/components/chowt-form/chowt-form.styles.scss
@@ -9,6 +9,8 @@
     border: none;
     resize: none;
     width: 80%;
+    display: block;
+    margin: auto;
 
     &::placeholder {
       color: white;
