--- a/client/src/pages/not-found/not-found.styles.scss
+++ b/client/src/pages/not-found/not-found.styles.scss
@@ -1,5 +1,4 @@
 .not-found-img-overlay {
-  height: 80vh;
   width: 80%;
   display: flex;
   flex-direction: column;
@@ -17,8 +16,9 @@
   }
 
   .img-text {
-    font-size: 28px;
+    font-size: 4vw;
     color: white;
+    word-break: break-word;
   }
 
   .nav-buttons {
