Override some styling for tabs on user-page

--- a/client/src/pages/user-page/user-page.styles.scss
+++ b/client/src/pages/user-page/user-page.styles.scss
@@ -10,4 +10,20 @@
     max-width: 135px;
     border-radius: 50%;
   }
+
+  .tab {
+    border: unset;
+
+    .tab-link {
+      &.active {
+        border-color: black;
+      }
+
+      &:hover {
+        &:hover {
+          background-color: rgba(black, 0.4);
+        }
+      }
+    }
+  }
 }
