--- a/client/src/pages/discover/discover.styles.scss
+++ b/client/src/pages/discover/discover.styles.scss
@@ -6,8 +6,8 @@
     border: none;
     border-radius: 4px;
     padding: 12px 20px;
-    width: 100%;
     transition: box-shadow 0.5s;
+    width: 100%;
 
     &:focus {
       outline: none;
@@ -17,5 +17,9 @@
 
   .list-item-group {
     margin-top: 1.5rem;
+  }
+
+  #who-to-follow {
+    margin-top: 1rem;
   }
 }
